Get All Partition Groups
