# entitlements-v2-core/src/main/java/org/opengroup/osdu/entitlements/v2/spi/retrievegroup/RetrieveGroupRepo.java
@@ -3,6 +3,7 @@ package org.opengroup.osdu.entitlements.v2.spi.retrievegroup;
 import org.opengroup.osdu.entitlements.v2.model.ChildrenReference;
 import org.opengroup.osdu.entitlements.v2.model.ChildrenTreeDto;
 import org.opengroup.osdu.entitlements.v2.model.EntityNode;
+import org.opengroup.osdu.entitlements.v2.model.GroupType;
 import org.opengroup.osdu.entitlements.v2.model.ParentReference;
 import org.opengroup.osdu.entitlements.v2.model.ParentTreeDto;
 
@@ -10,6 +11,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import org.opengroup.osdu.entitlements.v2.model.listgroup.ListGroupsOfPartitionDto;
 
 public interface RetrieveGroupRepo {
     EntityNode groupExistenceValidation(String groupId, String partitionId);
@@ -44,4 +46,6 @@ public interface RetrieveGroupRepo {
     Map<String, Integer> getAssociationCount(List<String> userIds);
 
     Map<String, Integer> getAllUserPartitionAssociations();
+
+    ListGroupsOfPartitionDto getGroupsInPartition(String dataPartitionId, GroupType groupType, String cursor, Integer limit);
 }
